Fix scrolling on mobile

--- a/_static/css/algolia.css
+++ b/_static/css/algolia.css
@@ -1,5 +1,5 @@
 .wy-nav-side { overflow: visible; }
-.wy-side-scroll { overflow: inherit; }
+.wy-side-scroll { overflow-x: inherit; }
 
 .algolia-autocomplete {
     display: block !important;
